src/UI/Content/Overrides/fullcalendar.less
.fc-view {
  overflow: visible;
}

.fc-event-title {
  padding: 0 2px;
  display: block;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

@media (max-width: @screen-xs-max) {
  .fc-button {
    padding: 0px 5px;
  }

  .fc-header-space {
    padding-left: 5px;
  }
}

